# filename

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: python-app.yml
src/ufilename/: __init__.py
tests/: test_filename.py
